--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,11 +74,11 @@
 
 
     <main class="main-contacto">
-        <h2>¿Te interesa algun curso? o ¿Queres algun producto?</h2>
-        <form>
+        <h2 class="titulo-contac">¿Te interesa algun curso? o ¿Queres algun producto?</h2>
+        <form class="formulario">
             <fieldset>
                 <legend>Envia tus cometarios</legend>
-                <div>
+                <div class="contenedor-form">
                     <label for="nombre">
                         Completa tu nombre
                     </label>
