--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!--actualizando para seo-->
+
+  <meta name="description" content="Cerveza artesanal , Cursos e Hidromiel">
+  <meta name="keywords" content="Cerveza,Hidromiel,Argentina">
+  <meta name="description"
+    content="Historia de la cerveza, sus inicios en la Argentina siglo XX. Contamos un poco de como nos convertimos en potencia a partir de los años 60 y como fuimos uno de los mejores fabricantes a nivel mundial desde Argentina al mundo">
+
   <!--estilo de fuente-->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-<!--link libreria aos-->
+  <!--link libreria aos-->
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -24,7 +31,7 @@
 
   <link rel="stylesheet" href="./css/main.css">
 
-  <title>Inicio</title>
+  <title>Home-Rohan</title>
 </head>
 
 <body class="body">
@@ -43,14 +50,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">inicio</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./pages/cursos.html">Cursos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page"
-                  href="./pages/ventas.html">Ventas</a>
+                <a class="nav-link active" aria-current="page" href="./pages/ventas.html">Ventas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Contacto</a>
@@ -70,13 +79,11 @@
   </header>
 
   <main class="main-inicio">
-    <div data-aos="fade-right"
-    data-aos-offset="300"
-    data-aos-easing="ease-in-sine">
+    <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
       <img src="./IMG/lvp.cervezatirada.jpg" alt="cerveza-tirada" class="img-main ">
     </div>
     <div class="parrafo">
-      <p >
+      <p>
       <h1>La Cerveza en Argentina</h1>
       </p>
       <p>
@@ -95,7 +102,8 @@
         No ocurre nada más destacable en nuestro país hasta los inicios del siglo XX que es cuando se inicia el cultivo
         de la flor de lúpulo, es aquí cuando inicia su explosión y su gran expansión que culmina hoy en día. A
         principios del siglo pasado la capital Mendocina contaba ya con seis fábricas de cerveza, la más destacada de
-        todas ellas es Rohan. Poco a poco su elaboración y consumo van mejorando, pero la situacion del pasi hace que todo
+        todas ellas es Rohan. Poco a poco su elaboración y consumo van mejorando, pero la situacion del pasi hace que
+        todo
         eso se vaya al traste. No fue hasta los años 60 con una nueva generación ya cuando el consumo y elaboración se
         empiezan a recuperar. A partir ya de esta década el consumo y el número de productores no deja de aumentar. De
         hecho en la actualidad somos el décimo mayor productor de cerveza a nivel mundial y ocupamos el puesto 12 en
@@ -132,10 +140,10 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 
