--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     <!--actualizando para seo-->
+
+  <meta name="description" content=" Atencion al cliente, Lagers dorada , Argentina , Tienda cervecera ">
+  <meta name="keywords" content="Argentina , Atencion al cliente , Servicio Post venta">
+  <meta name="description" content="Nuestro servioco de atencion al cleinte es una lo des mejores en el rubro , nos ponemos a disposicion del cliente o el emprendedor , generando la confianza que nos caracteriza como marca">
+
     <!--estilos de fuente-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,36 +39,37 @@
 
         <div class="menu">
             <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./nosotros.html">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./ventas.html">Ventas</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                            </li>
-                        </ul>
-
-                    </div>
+              <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./cursos.html">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page"
+                        href="./ventas.html">Ventas</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
+                    </li>
+                  </ul>
+      
                 </div>
+              </div>
             </nav>
-        </div>
-        <div>
+          </div>
+          <div>
             <!--imagen titulo-->
 
       <a href="../index.html"><img src="../IMG/comunidad.jpg" alt="imagen titulo" class="img-titulo3"></a>
