--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -6,6 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!--actualizando para seo-->
+
+  <meta name="description" content="Vasos personalizados , Tienda cervecera">
+  <meta name="keywords" content="Cerveza , Hidromiel , Argentina . Vasos">
+  <meta name="description"
+    content="Tienda propia de la marca, contamos actualmente con una gran variedad , de cervezas y detalles personalizados . Nuestras tienda se basa en la calidad de l producto y ver como se disfuta en las mejores manos.
+  Tenemos ofertas para pequeños y grandes emprendedores , el cual nos coloca en un lugar muy sercado al cliente o al consumidor final.">
   <!--estilos de fuente-->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,16 +53,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/cursos.html">Cursos</a>
+                <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
+                <a class="nav-link active" aria-current="page" href="./cursos.html">Cursos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
+                <a class="nav-link active" aria-current="page" href="./ventas.html">Ventas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
               </li>
             </ul>
 
@@ -63,7 +73,6 @@
         </div>
       </nav>
     </div>
-
     <div>
 
       <!--imagen titulo-->
@@ -74,48 +83,36 @@
   </header>
 
   <p>
-  <h2 class="titulo-ventas">Categoria premium de cervezas y accesorios</h2>
+  <h2 class="titulo-ventas">Cervezas y accesorios</h2>
   </p>
 
   <main class="main-ventas">
 
-    <div class="conteiner-img">
-      <div class="caja caja-uno">
-        <img src="../IMG/rubia.jpg" alt="cerveza rubia">
-        <p>cerveza rubia - 9999$ </p>
+    <div class="ventas">
+
+      <div>
+        <img src="../IMG/rubia.jpg" alt="cerveza rubia" class="photo-size">
+      </div>
+      <div>
+        <img src="../IMG/rojas.png" alt="cerveza roja" class="photo-size">
+      </div>
+      <div>
+        <img src="../IMG/ipa.jpg" alt="cerveza ipa" class="photo-size">
+      </div>
+      <div>
+        <img src="../IMG/negra.jfif" alt="cerveza negra" class="photo-size">
+      </div>
+      <div>
+        <img src="../IMG/hidromiel.webp" alt="hidromiel" class="photo-size">
+      </div>
+      <div>
+        <img src="../IMG/vasosperson.jpg" alt="vaso personalizado" class="photo-size">
       </div>
 
-      <div class="caja caja-uno">
-        <img src="../IMG/rojas.png" alt="cerveza roja">
-      <p>cerveza roja - 9999$</p>
-      </div>
-
-      <div class="caja caja-uno">
-        <img src="../IMG/ipa.jpg" alt="cerveza ipa">
-      <p>cerveza ipa - 9999$</p>
-      </div>
-
-      <div class="caja caja-uno">
-        <img src="../IMG/hidromiel.webp" alt="hidromiel">
-      <p>hidromiel- 9999$</p>
-      </div>
-
-      <div class="caja caja-uno">
-        <img src="../IMG/negra tirada.jpg" alt="cerveza negra">
-      <p>cerveza negra - 9999$</p>
-      </div>
-
-      <div class="caja caja-uno">
-        <img src="../IMG/vasosperson.jpg" alt="vaso personalizado">
-      <p>vaso personalizado SDA - 9999$</p>
-      </div>
-      
     </div>
 
 
-
   </main>
-
   <!--footer el mismo para todos los html-->
 
   <footer class="footer">
