--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -12,6 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
+     <!--actualizando para seo-->
+
+  <meta name="description" content="Cerveza artesanal , Historia , Lagers doradas ">
+  <meta name="keywords" content="Origen de la marca , Cerveza Europea , Lagers">
+  <meta name="description" content="Abocado a la excelencia , nuestros cursos no solamente preparan profecionales , sino mejores personas , nos enfocamos en que ellos aprendan de una forma dinamica apollados en un equipo . Tantos nuestros cursos de cerveza o hidromiel estan bajo la tutela de los mejor en el campo y con un fin en comun, lograr la mejor cerveza popsible con los elementos a disposicion "> 
     <!--link bootstrap-->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -35,34 +40,37 @@
 
         <div class="menu">
             <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./nosotros.html">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./ventas.html">Ventas</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
-                            </li>
-                        </ul>
-
-                    </div>
+              <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./cursos.html">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page"
+                        href="./ventas.html">Ventas</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
+                    </li>
+                  </ul>
+      
                 </div>
+              </div>
             </nav>
-        </div>
+          </div>
+          <div>
 
         <div>
             <!--imagen titulo-->
