--- a/index.html
+++ b/index.html
@@ -123,16 +123,22 @@
     </div>
 
 
-    <div>
+    <div class="redes-sociales">
 
       <a href="https://www.facebook.com"> <img src="./IMG/FACE.png" alt="imgen facebook" class="facebook"></a>
+   
+
+    
+
+      <a href="https://www.instagram.com/"><img src="./IMG/INSTA.png" alt="instagram" class="facebook"></a>
+
+  
+    
+
+      <a href="htts://www.twitter.com"><img src="./IMG/twitter.png" alt="instagram" class="facebook"></a>
+
     </div>
 
-    <div>
-
-      <a href="https://www.instagram.com/"><img src="./IMG/INSTA.png" alt="instagram" class="instagram"></a>
-
-    </div>
 
   </footer>
 
