--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -113,22 +113,28 @@
   <footer class="footer">
 
     <div>
-      <h1 class="titulo-footer">
+      <h2 class="titulo-footer">
         Todos los derechos reservados
-      </h1>
+      </h2>
     </div>
 
 
-    <div>
+    <div class="redes-sociales">
 
       <a href="https://www.facebook.com"> <img src="../IMG/FACE.png" alt="imgen facebook" class="facebook"></a>
+   
+
+    
+
+      <a href="https://www.instagram.com/"><img src="../IMG/INSTA.png" alt="instagram" class="facebook"></a>
+
+  
+    
+
+      <a href="htts://www.twitter.com"><img src="../IMG/twitter.png" alt="instagram" class="facebook"></a>
+
     </div>
 
-    <div>
-
-      <a href="https://www.instagram.com/"><img src="../IMG/INSTA.png" alt="instagram" class="instagram"></a>
-
-    </div>
 
   </footer>
 
