--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -118,21 +118,29 @@
   <footer class="footer">
 
     <div>
-      <h1 class="titulo-footer">
-        Todos los derecho reservados
-      </h1>
+      <h2 class="titulo-footer">
+        Todos los derechos reservados
+      </h2>
     </div>
 
 
-    <div>
+    <div class="redes-sociales">
 
       <a href="https://www.facebook.com"> <img src="../IMG/FACE.png" alt="imgen facebook" class="facebook"></a>
+   
+
+    
+
+      <a href="https://www.instagram.com/"><img src="../IMG/INSTA.png" alt="instagram" class="facebook"></a>
+
+  
+    
+
+      <a href="htts://www.twitter.com"><img src="../IMG/twitter.png" alt="instagram" class="facebook"></a>
+
     </div>
 
-    <div>
 
-      <a href="https://www.instagram.com/"><img src="../IMG/INSTA.png" alt="instagram" class="instagram"></a>
-    </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
