--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -100,7 +100,7 @@
         <img src="../IMG/ipa.jpg" alt="cerveza ipa" class="photo-size">
       </div>
       <div>
-        <img src="../IMG/negra.jfif" alt="cerveza negra" class="photo-size">
+        <img src="../IMG/negra.jpg" alt="cerveza negra" class="photo-size">
       </div>
       <div>
         <img src="../IMG/hidromiel.webp" alt="hidromiel" class="photo-size">
