--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">inicio</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
@@ -125,7 +125,7 @@
 
     <div class="redes-sociales">
 
-      <a href="https://www.facebook.com"> <img src="./IMG/FACE.png" alt="imgen facebook" class="facebook"></a>
+      <a href="https://www.facebook.com"> <img src="./IMG/face.png" alt="imgen facebook" class="facebook"></a>
    
 
     
