--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -126,7 +126,7 @@
 
     <div class="redes-sociales">
 
-      <a href="https://www.facebook.com"> <img src="../IMG/FACE.png" alt="imgen facebook" class="facebook"></a>
+      <a href="https://www.facebook.com"> <img src="../IMG/face.png" alt="imgen facebook" class="facebook"></a>
    
 
     
