--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -143,7 +143,7 @@
 
     <div class="redes-sociales">
 
-      <a href="https://www.facebook.com"> <img src="../IMG/FACE.png" alt="imgen facebook" class="facebook"></a>
+      <a href="https://www.facebook.com"> <img src="../IMG/face.png" alt="imgen facebook" class="facebook"></a>
    
 
     
